# gitsniffer

./: Dockerfile  README.md  gitsniff.py  requirements.txt  setup.cfg  supervisord.conf
gitsniffer/: cli.py  targeting.py  tasks.py
