[metadata]
name = gitsniffer
author = Ross Delinger
author-email = rossdylan@csh.rit.edu
summary = Find git repos where they live. In the CLOOUUD
description-file = README.md
license = GPLv3+
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    git
[files]
packages =
    gitsniffer
[entry_points]
console_scripts =
    gitsniffer = gitsniffer.cli:cli
    gitsniffer_target = gitsniffer.targeting:run_targeting
